# CudaUbuntu

./: .gitignore  CMakeLists.txt  Lock.cuh  allocate_variables.cu  allocate_variables.cuh  cal_interactions_forces.cu  cal_interactions_forces.cuh  def_const.h  def_global_variables.h  def_type.h  def_types.h  dlvo_forces.cu  dlvo_forces.cuh  init_params.cu  init_params.cuh  main.cu  normal_force_hertz.cu  normal_force_hertz.cuh  particle_interactions.cu  particle_interactions.cuh  read_micro.cu  read_micro.cuh  rolling_resistance_torque.cu  rolling_resistance_torque.cuh  small_vect_rot.cu  small_vect_rot.cuh  sub_domain.cu  sub_domain.cuh  tangential_force_mindlin_vect.cu  tangential_force_mindlin_vect.cuh  write_micro.cu  write_micro.cuh
Fichiers fournis/src_test/: Makefile  add_cone.c  add_cone.h  add_obj_spheres.c  add_obj_spheres.h  add_wall.c  add_wall.h  allocate_variables.c  allocate_variables.h  ancine_dist_sphere_mic  cal_compacity.c  cal_compacity.h  cal_interaction_forces.c  cal_interaction_forces.h  cluster_cluster_aggregation.h  cluster_properties.h  deallocate_variables.c  deallocate_variables.h  def_const.h  def_global_variables.h  def_types.h  dlvo_forces.c  dlvo_forces.h  fluid_forces.c  fluid_forces.h  force_model_hcss.c  force_model_hcss.h  init_params.c  init_params.h  list_header_files.h  main.ctest  mic_array.c  mic_array.h  normal_force_hertz.c  normal_force_hertz.h  old_main.c  particle_interactions.c  particle_interactions.h  penmp  ran1.c  (+25 more)
Fichiers fournis/test_micro/: logfile  micro_0001  micro_0001_cont  micro_0002  micro_0002_cont  micro_0003  (+18 more)
